--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
 @font-face {
     font-family: 'Post No Bills Jaffna Light'; /*a name to be used later*/
-    src: url('././fonts/PostNoBillsJaffna-Light.ttf'); /*URL to font*/
+    src: url('./fonts/PostNoBillsJaffna-Light.ttf'); /*URL to font*/
 
 }
 
 @font-face {
 font-family: 'jsMath'; /*a name to be used later*/
-src: url('././fonts/jsMath-cmsy10.ttf'); /*URL to font*/
+src: url('./fonts/jsMath-cmsy10.ttf'); /*URL to font*/
 }
 
 @font-face {
     font-family: 'Sansation Light'; /*a name to be used later*/
-    src: url('././fonts/Sansation_Light.ttf'); /*URL to font*/
+    src: url('./fonts/Sansation_Light.ttf'); /*URL to font*/
     }
 
 @font-face {
   font-family: 'Rajdhani'; /*a name to be used later*/
-  src: url('././fonts/Rajdhani-Light.ttf'); /*URL to font*/
+  src: url('./fonts/Rajdhani-Light.ttf'); /*URL to font*/
   }
 
 @font-face {
