--- a/photography/home.css
+++ b/photography/home.css
@@ -1,31 +1,31 @@
 @font-face {
     font-family: 'Post No Bills Jaffna Light';
-    src: url('/fonts/PostNoBillsJaffna-Light.ttf');
+    src: url('/Fonts/PostNoBillsJaffna-Light.ttf');
 }
 
 @font-face {
     font-family: 'Sansation Light';
-    src: url('/fonts/Sansation_Light.ttf');
+    src: url('/Fonts/Sansation_Light.ttf');
 }
 
 @font-face {
     font-family: 'Rajdhani';
-    src: url('/fonts/Rajdhani-Light.ttf');
+    src: url('/Fonts/Rajdhani-Light.ttf');
 }
 
 @font-face {
     font-family: 'Share Tech';
-    src: url('/fonts/ShareTech-Regular.ttf');
+    src: url('/Fonts/ShareTech-Regular.ttf');
 }
 
 @font-face {
     font-family: 'Saira Stencil One';
-    src: url('/fonts/SairaStencilOne-Regular.ttf');
+    src: url('/Fonts/SairaStencilOne-Regular.ttf');
 }
 
 @font-face {
     font-family: 'Inter';
-    src: url('/fonts/Inter_18pt-Light.ttf');
+    src: url('/Fonts/Inter_18pt-Light.ttf');
 }
 
 
