--- a/home.css
+++ b/home.css
@@ -48,24 +48,25 @@ body {
     user-select: none
 }
 
-.item {
-    /* border: 1px solid rgb(32, 49, 155); */
+/* .item {
+    border: 1px solid rgb(32, 49, 155);
     position: sticky;
     padding-bottom:20px;
-}
+} */
 
 .c_TheVault {
     max-width: 200px;
     max-height: 100px;
     user-select: none;
     padding-left: 32px;
-    transform: scale(1.5);
+    transform: scale(1.4) translateY(-10px) translateX(-10px);
     transform-origin: top left;
     margin-bottom: -25px;
     /* border: 1px solid rgb(0, 255, 170); */
     border-radius: 50px;   
     position: fixed;
     clip-path: inset(0px 0px 30px 10px); 
+    z-index:1000;
 }
 
 .menu {
@@ -84,6 +85,7 @@ body {
     padding-left: 50px;
     padding-top: 20px;
     /* border: 2px rgb(117, 147, 117) solid; */
+    z-index:1;
 }
 
 .main {
@@ -93,7 +95,7 @@ body {
     justify-content: center; /* Center horizontally */ /* Center vertically */
     height: 100vh; /* Full height */
     /* border: 2px blue solid; */
-    z-index: -1;
+    
 }
 
 .box {
@@ -103,7 +105,7 @@ body {
     padding: 10px;
     /* border: 2px red solid;  */
     transform:translateX(-125px);
-    z-index: -1;
+    z-index:0;
     justify-content: center; 
 }
 
@@ -115,6 +117,7 @@ body {
     font-family: 'Inter', sans-serif;
     font-size: 1.25em;
     margin-bottom: 20px;
+    
 
     
 }
@@ -131,6 +134,50 @@ body {
     margin-bottom: 20px;
 }
 
+.rect-button {
+    padding: 15px;
+    margin: 5px;
+    margin-inline-start: 0%;
+    margin-inline-end: 0%;
+    display:flex;
+    justify-content: center;
+    font-size: 1.35em; /* Text size */
+    color: white; /* Text color */
+    background-color: #1A1919; /* Button background color */
+    text-decoration: none; /* Removes underline */
+    text-align: center; /* Centers text inside */
+    border: none; /* No border */
+    border-radius: 5px; /* Rounded corners */
+    /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);  */
+    transition: background-color 0.1s ease, box-shadow 0.1s ease; /* Smooth hover effects */
+    cursor: pointer; /* Pointer cursor on hover */
+    display:block;
+    font-family: 'Rajdhani', sans-serif;
+
+    
+  
+    /* Ensure the entire button is clickable */
+
+  }
+  
+  .rect-button:hover {
+    background-color: #666666; /* Darker blue on hover */
+    /* box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);  */
+  }
+  
+  .rect-button:active {
+    background-color: #666666; /* Even darker blue on click */
+    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);  */
+    text-decoration:none;
+    display: block;
+  }
+  
+  .rect-button:focus {
+    outline: none; /* Remove focus outline */
+
+  }
+
+  
 .left {
     display: flex;
     margin-top: 60px;
