--- a/home2.css
+++ b/home2.css
@@ -95,7 +95,9 @@ body {
     justify-content: center; /* Center horizontally */ /* Center vertically */
     height: 100vh; /* Full height */
     /* border: 2px blue solid; */
-    
+    gap: 50px;
+    transform:translateX(-318px);
+    /* background-color: white; */
 }
 
 .box {
@@ -104,9 +106,23 @@ body {
     max-width: 1000px; /* Fixed width */
     padding: 10px;
     /* border: 2px red solid; */
-    transform:translateX(-125px);
+    transform:translateX(0px);
     z-index:0;
     justify-content: center; 
+    height: auto;
+    
+}
+
+.nav2 {
+    display: flex;
+    width: 350px;
+    max-width:600px; /* Fixed width */
+    padding: 10px;
+    /* border: 2px red solid; */
+    transform:translateX(0px);
+    z-index:0;
+    justify-content: center; 
+    
 }
 
 .text {
@@ -135,13 +151,13 @@ body {
 }
 
 .rect-button {
-    padding: 15px;
+    padding: 12px;
     margin: 5px;
     margin-inline-start: 0%;
     margin-inline-end: 0%;
     display:flex;
     justify-content: center;
-    font-size: 1.35em; /* Text size */
+    font-size: 1.2em; /* Text size */
     color: white; /* Text color */
     background-color: #1A1919; /* Button background color */
     text-decoration: none; /* Removes underline */
@@ -313,14 +329,44 @@ body {
 
 /* Media Queries for Responsive Design */
 
-@media (max-width: 1536px) {
-    .box {
+@media (max-width: 2400px) {
+    .main {
+
+        transform:translateX(-170px);
+        gap: 10px;
+    }
+}
+
+@media (max-width: 2000px) {
+
+    .main {
 
         transform:translateX(0px);
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1536px) {
+    
+    .box {
+
+        transform:translateX(0px);
+        padding-right: 50px;
+        
+    }
+
+}
+
+@media (max-width: 1168px) {
+
+    .box {
+        padding-right: 10px;
+    }
+
+}
+
+@media (max-width: 868px) {
+
+
     .container {
         flex-direction: column;
         height: 100vh;
@@ -406,4 +452,20 @@ body {
     #nav-links a:active {
         background-color: #2a2a2a; /* Change background on click */
     }
+}
+
+@media (max-width: 1168px) {
+
+.main {
+
+    display: block; /* Use flexbox to center the box */
+
+}
+
+.nav2 {
+
+    width: 100%;
+    max-width: 100%;
+}
+
 }
