--- a/home.css
+++ b/home.css
@@ -45,7 +45,7 @@ body {
     font-family: Arial, sans-serif;
     color: white;
     /* border: 1px solid red; */
-    user-select: none
+    /* user-select: none */
 }
 
 /* .item {
