--- a/about.css
+++ b/about.css
@@ -100,9 +100,8 @@ body {
     justify-content: center; /* Center horizontally */ /* Center vertically */
     height: 100vh; /* Full height */
     /* border: 2px blue solid; */
-    gap: 50px;
-    transform:translateX(-318px);
-    /* background-color: white; */
+    
+    
 }
 
 .box {
@@ -111,20 +110,7 @@ body {
     max-width: 1000px; /* Fixed width */
     padding: 10px;
     /* border: 2px red solid; */
-    transform:translateX(0px);
-    z-index:0;
-    justify-content: center; 
-    height: auto;
-    
-}
-
-.nav2 {
-    display: flex;
-    width: 350px;
-    max-width:600px; /* Fixed width */
-    padding: 10px;
-    /* border: 2px red solid; */
-    transform:translateX(0px);
+    transform:translateX(-125px);
     z-index:0;
     justify-content: center; 
     
@@ -145,11 +131,7 @@ body {
 
 .gallery {
 
-    column-count: 1;
-    column-gap: 5px;
-    max-width: 1000px;
-    /* margin: 20px auto;
-    padding: 0 10px; */
+
 
 }
 
@@ -157,21 +139,21 @@ body {
     width: 100%;
     height: auto;
     /* border-radius: 5px; */
-    /* margin-bottom: 5px; */
+    margin-bottom: 20px;
 }
 
 .rect-button {
-    padding: 12px;
+    padding: 15px;
     margin: 5px;
     margin-inline-start: 0%;
     margin-inline-end: 0%;
     display:flex;
     justify-content: center;
-    font-size: 1 em; /* Text size */
+    font-size: 1.35em; /* Text size */
     color: white; /* Text color */
     background-color: #1A1919; /* Button background color */
     text-decoration: none; /* Removes underline */
-    text-align: left; /* Centers text inside */
+    text-align: center; /* Centers text inside */
     border: none; /* No border */
     border-radius: 5px; /* Rounded corners */
     /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);  */
@@ -339,44 +321,14 @@ body {
 
 /* Media Queries for Responsive Design */
 
-@media (max-width: 2400px) {
-    .main {
-
-        transform:translateX(-170px);
-        gap: 10px;
-    }
-}
-
-@media (max-width: 2000px) {
-
-    .main {
-
-        transform:translateX(0px);
-    }
-}
-
 @media (max-width: 1536px) {
-    
     .box {
 
         transform:translateX(0px);
-        padding-right: 50px;
-        
     }
-
-}
-
-@media (max-width: 1168px) {
-
-    .box {
-        padding-right: 10px;
-    }
-
 }
 
 @media (max-width: 868px) {
-
-
     .container {
         flex-direction: column;
         height: 100vh;
@@ -462,20 +414,4 @@ body {
     #nav-links a:active {
         background-color: #2a2a2a; /* Change background on click */
     }
-}
-
-@media (max-width: 1168px) {
-
-.main {
-
-    display: block; /* Use flexbox to center the box */
-
-}
-
-.nav2 {
-
-    width: 100%;
-    max-width: 100%;
-}
-
 }
