--- a/home.css
+++ b/home.css
@@ -100,6 +100,7 @@ body {
     justify-content: center; /* Center horizontally */ /* Center vertically */
     height: 100vh; /* Full height */
     /* border: 2px blue solid; */
+    padding: 10px;
     
     
 }
