--- a/text/columns.css
+++ b/text/columns.css
@@ -78,6 +78,7 @@ body {
     justify-content: center; /* Center horizontally */
     height: 100vh; /* Full height */
     /* border: 2px orange solid; */
+    padding: 10px;
 
 }
 
