--- a/style.css
+++ b/style.css
@@ -495,6 +495,8 @@ padding-left: 50px;
   left: 35.4em;
   /* top: 46em; */
   top: 42em;
+    opacity:0.75;
+   transition: all 100ms ease;
 }
 
 .c_about-code {
@@ -509,10 +511,16 @@ padding-left: 50px;
   transition: all 300ms ease;
 }
 
-.c_about-code:hover{
+/* .c_about-code:hover{
   transition: all 300ms ease;
   transform: translateX(0.5em);
-}
+} */
+
+ .c_about-text:hover{
+  transition: all 100ms ease;
+  opacity:1;
+} 
+
 
 c_text-instance {
   width: 100%;
@@ -950,8 +958,11 @@ top: 475.5px;
 }
 
 .c_about-text {
-   left: 24.6em; 
-  top: 46em;
+/*    left: 24.6em; 
+  top: 46em; */
+left: 32em;
+  top: 76.9em;
+  width: 6em;
 }
 
 .c_about-code {
