--- a/text/columns.css
+++ b/text/columns.css
@@ -442,7 +442,10 @@ body {
         font-size: 1em;
         
     }
-
+    .rect-button {
+        font-size: 1.25em;
+        font-weight: bold;
+    }
 
     .rectangle22, .rectangle23 {
     display:none;
