--- a/home2.css
+++ b/home2.css
@@ -33,6 +33,10 @@
     src: url('/Fonts/proximanova_light.otf');
 }
 
+@font-face {
+    font-family: 'Lekton'; /*a name to be used later*/
+    src: url('/Fonts/Lekton-Regular.ttf'); /*URL to font*/
+    }
 
 
 * {
@@ -169,7 +173,7 @@ body {
     margin-inline-end: 0%;
     display:flex;
     justify-content: center;
-    font-size: 1 em; /* Text size */
+    font-size: 1em; /* Text size */
     color: white; /* Text color */
     background-color: #1A1919; /* Button background color */
     text-decoration: none; /* Removes underline */
@@ -420,7 +424,7 @@ body {
 
     .text {
         font-family: 'Inter', sans-serif;
-        font-size: 1em;
+        font-size: 1.1em;
         
     }
 
